Add: create register user and modal for contact

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -5,6 +5,7 @@
 
     --color-black-0: #000000;
     --color-black-1: #12121280;
+    --color-black-0-5: rgba(0,0,0,0.5);
 
     --color-white-0: #ffffff;
 }
